--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,4 @@
-
-
-events { # ???
+events { 
     worker_connections 1024;
 }
 
@@ -21,25 +19,13 @@ http {
        
         index index.php index.nginx-debian.html;
 
-        # location / {
-        #     autoindex on;
-        #     try_files $uri $uri/ =404;
-        # }
-
-        # location ~ \.php$ {								
-        #     include snippets/fastcgi-php.conf;
-        #     # fastcgi_pass wordpress:9000;				
-        # }
-
-        #???? why better ? both work 
-
         location / {
             try_files $uri $uri/ /index.php$is_args$args;
         }
         
         location ~ \.php$ {
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            # fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
+            fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
             fastcgi_index index.php;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
