--- a/srcs/requirements/mariadb/conf/mysqld.conf
+++ b/srcs/requirements/mariadb/conf/mysqld.conf
@@ -5,3 +5,7 @@ datadir = /var/lib/mysql
 socket = /var/run/mysqld/mysqld.sock
 skip-networking = false
 bind-address = 0.0.0.0
+
+# [galera]
+# bind-address=0.0.0.0
+# port=3306
