--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,22 +1,10 @@
-
 FROM debian:11
-
-# RUN apt update
-# RUN apt-get upgrade
-# RUN apt install -y wget
-
-# RUN apt-get install -y php7.3
-# RUN apt-get install -y php-fpm
-# RUN apt-get install -y php-mysql
-# RUN apt-get install -y curl 
-# RUN apt-get install -y bash 
-# RUN rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update && apt-get -y install \
 	wget \
 	curl \
 	bash \
-	php7.3 \
+	php \
 	php-cgi \
 	php-mysql \
 	php-fpm \
@@ -32,7 +20,7 @@ RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.ph
 RUN chmod +x wp-cli.phar
 RUN mv wp-cli.phar /usr/local/bin/wp
 
-COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/
+COPY ./conf/www.conf /etc/php/7.4/fpm/pool.d/
 
 RUN mkdir /run/php
 
@@ -47,7 +35,10 @@ WORKDIR /var/www/html/
 #We expose the 9000 port
 EXPOSE 9000
 
+COPY conf/start.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/start.sh
+
 #Launch PHP FPM in foreground and ignore deamonize from conf file (-F)
-CMD ["/usr/sbin/php-fpm7.4", "-F"]
+CMD ["sh", "/usr/local/bin/start.sh"]
 
 
