--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,34 +1,3 @@
-# FROM debian:11
-
-# # Install MariaDB Server
-# RUN apt update -y && \
-#     apt install -y mariadb-server\
-#     mariadb-client\
-#     vim \
-#     && rm -rf /var/lib/apt/lists/*
-
-# RUN mkdir -p /var/run/mysqld \
-#         && chown -R mysql:mysql /var/run/mysqld \
-#         && chmod 777 /var/run/mysqld
-
-# EXPOSE 3306
-
-# COPY tools/script.sh /usr/local/bin/
-# COPY conf/wordpress.sql /usr/local/bin/
-
-# RUN chmod +x /usr/local/bin/script.sh
-# RUN chmod +x /usr/local/bin/wordpress.sql
-
-
-# CMD ["sh", "/usr/local/bin/script.sh"] 
-
-# # Set entry point to run the initialization script
-# ENTRYPOINT ["sh", "/usr/local/bin/script.sh"]
-
-# CMD ["mysqld", "--bind-address=0.0.0.0"]
-
-
-
 FROM debian:11
 
 # Install MariaDB server and client
@@ -41,7 +10,7 @@ RUN mkdir -p /var/run/mysqld \
         && chown -R mysql:mysql /var/run/mysqld \
         && chmod 777 /var/run/mysqld
 
-COPY ./tools/script.sh /var/local/bin/setup.sh
+COPY ./tools/setup.sh /var/local/bin/setup.sh
 # Give execute permissions to your script
 RUN chmod +x /var/local/bin/setup.sh
 
@@ -52,5 +21,5 @@ EXPOSE 3306
 
 # Set CMD to make MariaDB listen on all IPv4 addresses
 # CMD ["", "--bind-address=0.0.0.0"]
-CMD ["sh", "/var/local/bin/setup.sh"]
+CMD ["sh", "/var/local/bin/setup.sh", "--bind-address=127.0.0.1", "port=3306"]
 # CMD [""]
