--- a/srcs/requirements/mariadb/conf/mysqld.conf
+++ b/srcs/requirements/mariadb/conf/mysqld.conf
@@ -4,8 +4,10 @@ port = 3306
 datadir = /var/lib/mysql
 socket = /var/run/mysqld/mysqld.sock
 skip-networking = false
-bind-address = 0.0.0.0
+bind-address = 127.0.0.1
+
+# bind-address=0.0.0.0
 
 # [galera]
-# bind-address=0.0.0.0
+# bind-address=.0
 # port=3306
