--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -11,6 +11,7 @@ RUN mkdir -p /var/run/mysqld \
         && chmod 777 /var/run/mysqld
 
 COPY ./tools/setup.sh /var/local/bin/setup.sh
+COPY ./conf/mysqld.conf /etc/mysql/my.cnf
 # Give execute permissions to your script
 RUN chmod +x /var/local/bin/setup.sh
 
@@ -19,10 +20,4 @@ RUN chmod +x /var/local/bin/setup.sh
 
 EXPOSE 3306
 
-# Set CMD to make MariaDB listen on all IPv4 addresses
-
-# CMD ["sh", "/var/local/bin/setup.sh", "--bind-address=127.0.0.1", "port=3306"]
-
-CMD ["sh", "/var/local/bin/setup.sh", "--bind-address=127.0.0.1", "port=3306"]
-
-# CMD [""]
+CMD ["sh", "/var/local/bin/setup.sh"]
