all works, check by subject

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,11 @@
+WP_ADMIN=
 SQL_DATABASE=wordpress
-# SQL_DATABASE=mydb
-SQL_USER=user
-SQL_PASSWORD=1234
+SQL_USER=ptoshiko
+SQL_PASSWORD=my1234
 SQL_ROOT_PASSWORD=8900
 SQL_HOSTNAME=mariadb
+
+WP_SECOND_USER=bob
+WP_SECOND_EMAIL=bob@gmail.com
+WP_SECOND_PASSWORD=bobbyy
 
