--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -17,7 +17,7 @@ http {
         #root and index and server_name
         root /var/www/html;
        
-        index index.php index.nginx-debian.html;
+        index index.php index.html index.nginx-debian.html;
 
         location / {
             try_files $uri $uri/ /index.php$is_args$args;
