--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -8,21 +8,36 @@ RUN apt-get update && \
     apt-get install -y mariadb-server mariadb-client
 
 
-RUN mkdir -p /var/run/mysqld \
-        # && chown -R mysql:mysql /var/run/mysqld \
-        && chmod 777 /var/run/mysqld
+# RUN mkdir -p /var/run/mysqld \
+#         # && chown -R mysql:mysql /var/run/mysqld \
+#         && chmod 777 /var/run/mysqld
 
-COPY ./conf/mysqld.conf /etc/mysql/my.cnf
+RUN mkdir /var/run/mysqld; \
+    chmod 777 /var/run/mysqld; \
+    { echo '[mysqld]'; \
+      echo 'skip-host-cache'; \
+      echo 'skip-name-resolve'; \
+      echo 'bind-address=0.0.0.0'; \
+    } | tee  /etc/my.cnf.d/docker.cnf; \
+    sed -i "s|skip-networking|skip-networking=0|g" \
+      /etc/my.cnf.d/mariadb-server.cnf
+
+# COPY ./conf/mysqld.conf /etc/mysql/my.cnf
 
 RUN mysql_install_db --user=mysql --datadir=/var/lib/mysql
 
 EXPOSE 3306
 
-COPY ./tools/setup.sh /var/local/bin/setup.sh
+# COPY ./tools/setup.sh /var/local/bin/setup.sh
 
-RUN chmod +x /var/local/bin/setup.sh
+# RUN sh /var/local/bin/setup.sh
 
+# USER mysql
+
+# # CMD bash -c "/var/local/bin/setup.sh"
+# CMD ["mysqld", "--skip-log-error"]
+
+COPY requirements/mariadb/conf/setup.sh .
+RUN sh setup.sh && rm setup.sh
 USER mysql
-
-# CMD bash -c "/var/local/bin/setup.sh"
-CMD ["mysqld", "--skip-log-error"]
+CMD ["/usr/bin/mysqld", "--skip-log-error"]
