mariadb new changes in Docker

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -20,7 +20,7 @@ RUN mkdir /var/run/mysqld; \
       echo 'bind-address=0.0.0.0'; \
     } | tee  /etc/my.cnf.d/docker.cnf; \
     sed -i "s|skip-networking|skip-networking=0|g" \
-      /etc/my.cnf.d/mariadb-server.cnf
+      /etc/mysql/my.cnf
 
 # COPY ./conf/mysqld.conf /etc/mysql/my.cnf
 
