--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,43 +1,29 @@
 FROM debian:11
 
-ARG SQL_DATABASE \
-    SQL_USER \
-   	SQL_PASSWORD
-
+# Install MariaDB server and client
 RUN apt-get update && \
     apt-get install -y mariadb-server mariadb-client
 
+# Copy your script and SQL file to the container
+# COPY ./scripts/setup.sh /var/local/bin/
+RUN mkdir -p /var/run/mysqld \
+        && chown -R mysql:mysql /var/run/mysqld \
+        && chmod 777 /var/run/mysqld
 
-# RUN mkdir -p /var/run/mysqld \
-#         # && chown -R mysql:mysql /var/run/mysqld \
-#         && chmod 777 /var/run/mysqld
+COPY ./tools/setup.sh /var/local/bin/setup.sh
 
-RUN mkdir /var/run/mysqld; \
-    chmod 777 /var/run/mysqld; \
-    { echo '[mysqld]'; \
-      echo 'skip-host-cache'; \
-      echo 'skip-name-resolve'; \
-      echo 'bind-address=0.0.0.0'; \
-    } | tee  /etc/my.cnf.d/docker.cnf; \
-    sed -i "s|skip-networking|skip-networking=0|g" \
-      /etc/mysql/my.cnf
+COPY ./conf/mysqld.conf /etc/mysql/my.cnf
 
-# COPY ./conf/mysqld.conf /etc/mysql/my.cnf
+# COPY conf/50-server.cnf	/etc/mysql/mariadb.conf.d/50-server.cnf
 
-RUN mysql_install_db --user=mysql --datadir=/var/lib/mysql
+# Give execute permissions to your script
+RUN chmod +x /var/local/bin/setup.sh
+
+# Launch your setup script to install MariaDB
+# RUN /var/local/bin/setup.sh
 
 EXPOSE 3306
 
-# COPY ./tools/setup.sh /var/local/bin/setup.sh
+CMD bash -c "/var/local/bin/setup.sh"
 
-# RUN sh /var/local/bin/setup.sh
-
-# USER mysql
-
-# # CMD bash -c "/var/local/bin/setup.sh"
-# CMD ["mysqld", "--skip-log-error"]
-
-COPY ./tools/setup.sh .
-RUN sh setup.sh && rm setup.sh
-USER mysql
-CMD ["mysqld", "--skip-log-error"]
+# CMD ["sh", "/var/local/bin/setup.sh"]
